# voice-to-text

./: .env.example  .gitignore  .npmrc  LICENSE  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml
apps/mobile/: app.json  metro.config.js  package.json  tsconfig.json
apps/mobile/android/: settings.gradle
apps/mobile/android/app/: build.gradle
apps/mobile/android/app/src/main/: AndroidManifest.xml
apps/mobile/android/app/src/main/assets/: index.android.bundle
apps/mobile/android/app/src/main/res/values/: colors.xml  strings.xml  (+1 more)
apps/mobile/android/voiceflow-ime/: build.gradle
apps/mobile/android/voiceflow-native/: build.gradle
apps/mobile/android/voiceflow-native/src/main/: AndroidManifest.xml
apps/mobile/android/voiceflow-native/src/main/cpp/: CMakeLists.txt  llm_wrapper.cpp  whisper_wrapper.cpp  whisper_wrapper.h
apps/mobile/assets/: README.md
apps/mobile/ios/: Podfile
apps/mobile/ios/VoiceFlow/: Info.plist  VoiceFlowAudio.swift  VoiceFlowAudioBridge.m
apps/mobile/ios/VoiceFlow.xcodeproj/: project.pbxproj
apps/mobile/ios/VoiceFlow.xcodeproj/xcshareddata/xcschemes/: VoiceFlow.xcscheme
apps/mobile/ios/VoiceFlow.xcworkspace/: contents.xcworkspacedata
apps/mobile/native-android/voiceflow-ime/: build.gradle
apps/mobile/native-android/voiceflow-ime/src/main/: AndroidManifest.xml
apps/mobile/native-android/voiceflow-native/: build.gradle
apps/mobile/native-android/voiceflow-native/src/main/cpp/: CMakeLists.txt  llm_wrapper.cpp  llm_wrapper.h  voiceflow_jni.cpp
apps/mobile/native-ios/VoiceFlowKeyboard/: VoiceFlowKeyboardViewController.swift
apps/mobile/native-ios/VoiceFlowNative/: VoiceFlowAudio.h  VoiceFlowAudio.mm  VoiceFlowLlm.h  VoiceFlowLlm.mm  VoiceFlowNative.podspec  VoiceFlowWhisper.h  VoiceFlowWhisper.mm
apps/mobile/native-ios/VoiceFlowNative/cpp/: README.md
apps/mobile/src/: App.tsx  config.ts  theme.ts
apps/mobile/src/components/: Waveform.tsx
apps/mobile/src/features/auth/: AuthGate.tsx  AuthScreen.tsx
apps/mobile/src/features/dictation/: useDictation.ts
apps/mobile/src/features/history/: useHistory.ts
apps/mobile/src/features/onboarding/: ModelDownloadGate.tsx  OnboardingWizard.tsx
apps/mobile/src/features/settings/: useSettings.ts
apps/mobile/src/features/userdata/: useUserData.ts
apps/mobile/src/native/: AudioRecorder.ts  Llm.ts  Whisper.ts
apps/mobile/src/screens/: HistoryScreen.tsx  HomeScreen.tsx  ModelManagerScreen.tsx  SettingsScreen.tsx
apps/mobile/src/services/: auth.ts  cloudStt.ts  models.ts  outbox.ts  telemetry.ts
docs/: ANDROID_KEYBOARD.md  ARCHITECTURE.md  IOS_LIMITS.md  PHASE1_INTEGRATION.md  PHASE3_INTEGRATION.md  PRIVACY.md  RELEASE_CHECKLIST.md  ROADMAP.md  TERMS.md
scripts/: download-models.sh  smoke-test.sh  vendor-cpp.sh
server/: package.json  tsconfig.json
server/migrations/: 0001_init.sql  0002_telemetry_oauth.sql  0003_telemetry_setting.sql
server/prisma/: schema.prisma
server/scripts/: migrate.ts
server/src/: db.ts  env.ts  index.ts  oauth.ts  s3.ts  types.d.ts
server/src/routes/: ai.ts  auth.ts  billing.ts  health.ts  sync.ts  telemetry.ts  uploads.ts
(+11 files in other folders)
